# seollal-bootcamp-base

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yaml  main.tf  pyproject.toml  terraform.tfstate.backup
alembic/: env.py
alembic/versions/: 2ed780dc5380_create_product_table.py  2f3b23c0b1f0_create_order_table.py  97219e6f07e5_add_product_table.py
database_init/: create_tables.sql
github/workflows/: workflow.yaml
scripts/: formatter.sh
src/app/: database.py  main.py  routes.py  schemas.py  settings.py  util.py
src/app/database/: __init__.py  connection_provider.py  repository_factory.py
src/app/infra/: __init__.py  repository_factory.py
src/app/models/: order.py  product.py
src/app/models/in_memory/: product.py
src/app/routes/: order.py  product.py
src/app/schemas/: base.py  order.py  product.py
src/app/services/: order.py  product.py
tests/: conftest.py
tests/e2e/: test_product.py
tests/integration/: test_product_service.py  test_repository.py
tests/unit/: test_product.py
