[project]
name = "complete-fastapi-example"
description = "A more complete introduction to FastAPI"
version = "0.1.0"
authors = [
    { name = "Bryan \"Beege\" Berry", email = "beege@codeseoul.org" }
]
dependencies = [
    "fastapi[standard] ~= 0.115.6",
    "pydantic-settings",
    "psycopg2-binary ~= 2.9.10",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "alembic"
]

[project.scripts]
run = "app.main:main"
