[project]
name = "seollal-bootcamp-2025-backend"
description = "A more complete introduction to FastAPI"
version = "0.1.0"
authors = [
    { name = "Bryan \"Beege\" Berry", email = "beege@codeseoul.org" }
]
dependencies = [
    "fastapi[standard] ~= 0.115.6",
    "pydantic-settings",
    "asyncpg ~= 0.30.0",
    "SQLAlchemy ~= 2.0.37",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "alembic"
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--asyncio-mode=auto"
]

[tool.isort]
profile = "black"

[project.scripts]
run = "app.main:main"
